Fix alignment of project cards section title

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ main p {
   display: grid;
   grid-template-rows: 50px 1fr;
   margin-left: 20px;
+  row-gap: 10px;
 }
 
 #main__projects > h1 {
